--- a/metadata.yaml
+++ b/metadata.yaml
@@ -45,5 +45,6 @@ subjects:
 - !lcsh 'French fiction -- 18th century'
 - !lcsh 'Free will and determinism -- Fiction'
 - !lcsh 'Valets -- Fiction'
+- GITenberg
 title: Jacques le fataliste et son maître
 url: http://www.gutenberg.org/ebooks/39976
